Added nav in index.html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
 </head>
 <body>
     <header>
+        <nav>
         <h1>Prakritisutra</h1>
+            <div><a href="#events">Events</a></div>
+            <div><a href="#volunteer">Volunteer</a></div>
+            <div><a href="#impact">Impact</a></div>
+            <div><a href="#contact">Contact</a></div>
+        </nav>
         
     </header>
+    <main>
+
+    </main>
 </body>
 </html>
