--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       
         <h1>Prakritisutra</h1><br>
         <nav>
-             <div><a href="#home">Home</a></div>
-            <div><a href="#events">Events</a></div>
-            <div><a href="#volunteer">Volunteer</a></div>
-            <div><a href="#impact">Impact</a></div>
-            <div><a href="#contact">Contact</a></div>
+            <div class="hov"><a href="#home">Home</a></div>
+            <div class="hov"><a href="#events">Events</a></div>
+            <div class="hov"><a href="#volunteer">Volunteer</a></div>
+            <div class="hov"><a href="#impact">Impact</a></div>
+            <div class="hov"><a href="#contact">Contact</a></div>
         </nav>
         
     </header>
