volunteer section added

--- a/volunteer.html
+++ b/volunteer.html
@@ -17,7 +17,25 @@
             <div><a href="/Team-InnovateHer-s/aboutUs.html">About us</a></div>
             <div><a href="/Team-InnovateHer-s/contact.html">Contact</a></div>
         </nav>
-        
-    </header>
+        </header>
+        <pre>
+            <b>Why Volunteer With Us?</b>
+
+Change Lives: Your effort can bring hope and smiles to those who need it most.
+
+Grow Yourself: Learn new skills, gain experience, and connect with a passionate community.
+
+Leave a Legacy: Be part of meaningful projects that make a lasting difference.
+
+Ways You Can Make an Impact:
+
+Community Outreach & Support
+
+Event Organization & Assistance
+
+Mentorship & Education Programs
+
+Fundraising & Awareness Campaigns
+        </pre>
 </body>
 </html>
