--- a/events.html
+++ b/events.html
@@ -19,5 +19,29 @@
         </nav>
         </header>
     
+    <section id="Event lists">
+    <h3>JOIN OUR UPCOMING EVENTS </h3>
+    <p>Following are the events happening near you</p>
+    <div id="'events-container" class="events-grid"></div>
+    </section>
+    <section id="create-event">
+            <h2>Create a New Event</h2>
+            <form id="event-form">
+                <label for="eventName">Event Name:</label>
+                <input type="text" id="eventName" required>
+                    <br><BR>
+                <label for="eventDate">Date:</label>
+                <input type="date" id="eventDate" required>
+                    <br><BR>
+                <label for="eventLocation">Location:</label>
+                <input type="text" id="eventLocation" required>
+                    <BR><br>
+                <label for="eventDesc">Description:</label>
+                <textarea id="eventDesc" rows="4" required></textarea>
+
+                <button type="submit">Submit Event</button>
+            </form>
+        </section>
+
 </body>
 </html>
